# nl-analytics-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: reviewer.md  test-writer.md
.claude/commands/: implement.md  plan.md  pr.md  review.md  spec.md  start.md  tasks.md
app/: main.py  starter.py
app/agents/: __init__.py  followup_agent.py  insight_agent.py  sql_agent.py  visualization_agent.py
app/config/: db_config.py  env_config.py  llm_config.py  log_config.py
app/models/: __init__.py  base.py  customer.py  order.py  order_item.py  product.py
app/orchestration/: __init__.py  graph.py  state.py
app/prompts/: __init__.py  followup_prompt.py  insight_prompt.py  orchestrator_prompt.py  sql_prompt.py  visualization_prompt.py
app/repositories/: query_repository.py
app/routes/: chat_routes.py  health.py  query_routes.py
app/schemas/: __init__.py  chart_config.py  conversation.py  entities.py  followup_result.py  insight_result.py  requests.py  responses.py  sql_result.py  workflow_state.py
app/services/: chat_service.py  sql_service.py
app/tools/: __init__.py  followup_tools.py  insight_tools.py  sql_tools.py  visualization_tools.py
app/utils/: chart_helpers.py  database_initializer.py  validators.py
docs/: FRS.md  SDS.md  nl-analytics-dashboard-spec.md
docs/decisions/: technical_architecture.md
docs/issues/: 01-nl-querying-sql-generation.md  01-query-database-tool.md  01-sql-pipeline.md  02-api-layer-fastapi.md  (+19 more)
openspec/: config.yaml
tests/: conftest.py  test_starter.py
website/: app.py
(+89 files in other folders)
